Changed general header fonts and added cards to the about me section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <img src="res/pozasite.jpg" alt="Tanase Stefan-Daniel">
                 </div>
                 <div class="about-text">
-                    <p>I am a student specializing in Mathematics and Computer Science, with a deep interest in web development, data analysis, and machine learning. My journey in the tech world began with a curiosity for problem-solving and innovation.</p>
+                    <p>I am a student specializing in Mathematics and Computer Science, with a deep interest in web development, data analysis, and machine learning.</p>
                     <p>Through my studies, I aim to combine my mathematical foundation with programming expertise to tackle real-world challenges.</p>
                 </div>
             </div>
@@ -68,26 +68,24 @@
     <section id="education" class="section education">
         <div class="container">
             <h2>Education</h2>
-            <div class="education-grid">
-                <div class="education-card">
+            <div class="education-list">
+                <div class="education-item">
                     <h3>University of Bucharest</h3>
                     <p>Faculty of Mathematics and Computer Science</p>
                     <p>Year 1 - Computer Science</p>
                     <p>Currently Pursuing</p>
                 </div>
-                <div class="education-card">
+                <div class="education-item">
                     <h3>National College „Bogdan Petriceicu Hașdeu” Buzău</h3>
                     <p>Studied Mathematics and Informatics</p>
-                    <p>Gained experience with new programming languages: Python, C#, Java</p>
                     <p>2020-2024</p>
                 </div>
-                <div class="education-card">
+                <div class="education-item">
                     <h3>Programming Center of „Palatul Copiilor” Buzău</h3>
-                    <p>Started my hobby in competitive programming</p>
-                    <p>Participated in many local programming competitions</p>
+                    <p>Participated in competitive programming</p>
                     <p>2012-2019</p>
                 </div>
-                <div class="education-card">
+                <div class="education-item">
                     <h3>"George Emil Palade" Secondary School No. 15 Buzău</h3>
                     <p>2012-2020</p>
                 </div>
