Modified About Me section

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <section id="home" class="section home">
         <div class="container">
             <div class="home-content">
-                <h1 class="fade-in">Find out more about me!</h1>
-                <p class="fade-in-delay">Hello! I’m Tanase Stefan-Daniel, a passionate student at "Facultatea de Matematica si Informatica".</p>
+                <h1 class="fade-in">Explore my journey!</h1>
+                <p class="fade-in-delay">Hi, I am Tănase Ștefan-Daniel, college student at Faculty of Mathematics and Computer Science.</p>
                 <a href="#about" class="cta-btn slide-in">Learn More About Me</a>
             </div>
         </div>
@@ -53,13 +53,17 @@
     <section id="about" class="section about">
         <div class="container">
             <h2>About Me</h2>
-            <div class="about-grid">
+            <div class="about-card">
                 <div class="about-image">
-                    <img src="res/pozasite.jpg" alt="Tanase Stefan-Daniel">
+                    <img src="res/pozawebsite2.jpg" alt="Tanase Stefan-Daniel">
+                </div>
+                <h2>Tănase Ștefan-Daniel</h2>
+                <div class="description">
+                    <p>Computer Science and Mathematics Student</p>
                 </div>
                 <div class="about-text">
                     <p>I am a student specializing in Mathematics and Computer Science, with a deep interest in web development, data analysis, and machine learning.</p>
-                    <p>Through my studies, I aim to combine my mathematical foundation with programming expertise to tackle real-world challenges.</p>
+                    <p>My journey in the tech world began with a curiosity for problem-solving and maths. Through my studies, I aim to combine my mathematical foundation with programming expertise to tackle real-world challenges.</p>
                 </div>
             </div>
         </div>
@@ -82,7 +86,7 @@
                 </div>
                 <div class="education-item">
                     <h3>Programming Center of „Palatul Copiilor” Buzău</h3>
-                    <p>Participated in competitive programming</p>
+                    <p>Studied algorithms and participated in competitive programming competitions</p>
                     <p>2012-2019</p>
                 </div>
                 <div class="education-item">
