Added social link dropdown and socials on footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <header>
         <nav class="navbar">
             <div class="logo">Tanase Stefan-Daniel</div>
+            <button class="menu-toggle" aria-label="Toggle navigation">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li class="dropdown">
@@ -22,6 +27,17 @@
                     </ul>
                 </li>
                 <li><a href="#contact">Contact</a></li>
+                <li class="dropdown socials">
+                    <a href="#" class="drop-btn">
+                        Socials
+                        <!-- <span class="dropdown-icon">&#9776;</span> -->
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="https://www.instagram.com/yrn.stephane/" target="_blank">Instagram</a></li>
+                        <li><a href="https://www.facebook.com/daniel.stefan.12979" target="_blank">Facebook</a></li>
+                        <li><a href="https://github.com/1tanasestefan" target="_blank">GitHub</a></li>
+                    </ul>
+                </li>
             </ul>
 
             <div class="dark-mode-toggle">
@@ -141,6 +157,17 @@
 
     <footer>
         <p>© 2024 Tanase Stefan-Daniel. All rights reserved.</p>
+        <div class="footer-socials">
+            <a href="https://www.instagram.com/yrn.stephane/" target="_blank">
+                <img src="res/instagram-seeklogo.png" alt="Instagram">
+            </a>
+            <a href="https://www.facebook.com/daniel.stefan.12979" target="_blank">
+                <img src="res/facebooklogo.svg" alt="Facebook">
+            </a>
+            <a href="https://github.com/1tanasestefan" target="_blank">
+                <img src="res/icons8-github-30.png" alt="GitHub">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
