Modified about me section, added icons to the education cards and animated the footer icons

--- a/index.html
+++ b/index.html
@@ -78,8 +78,12 @@
                     <p>Computer Science and Mathematics Student</p>
                 </div>
                 <div class="about-text">
-                    <p>I am a student specializing in Mathematics and Computer Science, with a deep interest in web development, data analysis, and machine learning.</p>
-                    <p>My journey in the tech world began with a curiosity for problem-solving and maths. Through my studies, I aim to combine my mathematical foundation with programming expertise to tackle real-world challenges.</p>
+                    <p>I am a college student specializing in Mathematics and Computer Science, with a deep interest in web development, data analysis, and machine learning.</p>
+                    <p>My journey in the tech world began with curiosity for problem-solving and maths. Through my studies, I aim to combine my mathematical foundation with programming expertise to tackle real-world challenges.</p>
+                    <p>I began studying programming at 8 years old at a programming centre in Buzău, my home county, where I started by learning Scratch, a very kid-friendly visual programming language, which ignited my passion for programming. Then I began learning C and C++, which was quite a heavy step for a kid at the age of 11, but I adapted easily and loved to learn algorithms and to participate competitive programming contests such as OJI. Since then, I still love programming in C and C++, but also learned other languages such as Python, Kotlin and web development languages.</p>
+                    <p>The passion for programming helped me develop problem-solving skills which were useful in mathematics for example, or made me discover new passions and hobbies such as solving various puzzles like the Rubik’s Cube.</p>
+                    <p>I love learning and discovering new things and I am still in a continuous learning process.</p>
+                
                 </div>
             </div>
         </div>
@@ -90,22 +94,34 @@
             <h2>Education</h2>
             <div class="education-list">
                 <div class="education-item">
+                    <div class="icon">
+                        🎓
+                    </div>
                     <h3>University of Bucharest</h3>
                     <p>Faculty of Mathematics and Computer Science</p>
                     <p>Year 1 - Computer Science</p>
                     <p>Currently Pursuing</p>
                 </div>
                 <div class="education-item">
-                    <h3>National College „Bogdan Petriceicu Hașdeu” Buzău</h3>
+                    <div class="icon">
+                        🎓
+                    </div>
+                    <h3>National College „Bogdan Petriceicu Hasdeu” Buzău</h3>
                     <p>Studied Mathematics and Informatics</p>
                     <p>2020-2024</p>
                 </div>
                 <div class="education-item">
+                    <div class="icon">
+                        🎓
+                    </div>
                     <h3>Programming Center of „Palatul Copiilor” Buzău</h3>
                     <p>Studied algorithms and participated in competitive programming competitions</p>
                     <p>2012-2019</p>
                 </div>
                 <div class="education-item">
+                    <div class="icon">
+                        🎓
+                    </div>
                     <h3>"George Emil Palade" Secondary School No. 15 Buzău</h3>
                     <p>2012-2020</p>
                 </div>
