Updated notification UI

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </form>
             </div>
         </div>
-        <div id="notification" style="display: none;"></div>
+        <div id="notification" class="notification hidden"></div>
     </section>
     <section id="messages" class="section messages">
         <div class="container">
