Added secret button functionality

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="res/icons8-admin-96.png" type="image/png">
     <title>Tanase Stefan-Daniel</title>
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -12,11 +13,6 @@
     <header>
         <nav class="navbar">
             <div class="logo">Tanase Stefan-Daniel</div>
-            <button class="menu-toggle" aria-label="Toggle navigation">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li class="dropdown">
@@ -178,6 +174,7 @@
     </section>
 
     <footer>
+        <button class="color-button"></button>
         <p>© 2024 Tanase Stefan-Daniel. All rights reserved.</p>
         <div class="footer-socials">
             <a href="https://www.instagram.com/yrn.stephane/" target="_blank">
