Added id for typing effect

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="description">
                     <p>Computer Science and Mathematics Student</p>
                 </div>
-                <div class="about-text">
+                <div class="about-text" id="typing-effect">
                     <p>I am a college student specializing in Mathematics and Computer Science, with a deep interest in web development, data analysis, and machine learning.</p>
                     <p>My journey in the tech world began with curiosity for problem-solving and maths. Through my studies, I aim to combine my mathematical foundation with programming expertise to tackle real-world challenges.</p>
                     <p>I began studying programming at 8 years old at a programming centre in Buzău, my home county, where I started by learning Scratch, a very kid-friendly visual programming language, which ignited my passion for programming. Then I began learning C and C++, which was quite a heavy step for a kid at the age of 11, but I adapted easily and loved to learn algorithms and to participate in competitive programming contests such as OJI. Since then, I still love programming in C and C++, but also learned other languages such as Python, Kotlin and web development languages.</p>
